charon/tests/ui/error-dependencies.out
error: Trait aliases are not supported
 --> /rustc/library/core/src/ptr/metadata.rs:81:1

note: the error occurred when translating `core::ptr::metadata::Thin`, which is (transitively) used at the following location(s):
  --> tests/ui/error-dependencies.rs:8:13
   |
 8 |     let _ = core::ptr::null::<u8>();
   |             -----------------------
 9 |     let _ = opaque::other_error();
...
14 |     pub fn other_error() {
15 |         let _ = custom_null::<u8>();
   |                 -------------------
16 |     }
17 |     fn custom_null<T: core::ptr::Thin>() {}
   |                       ---------------
   |
error: Item `core::ptr::metadata::Thin` caused errors; ignoring.
 --> /rustc/library/core/src/ptr/metadata.rs:81:1

ERROR The extraction generated 2 errors
